@@ -1,6 +1,7 @@
 package docker
 
 import (
+	"fmt"
 	"path"
 
 	"github.com/elastic/beats/filebeat/channel"
@@ -29,14 +30,30 @@ func NewProspector(cfg *common.Config, outletFactory channel.Factory, context pr
 	}
 
 	// Wrap log prospector with custom docker settings
-	if len(config.Containers.IDs) > 0 {
-		for idx, containerID := range config.Containers.IDs {
-			cfg.SetString("paths", idx, path.Join(config.Containers.Path, containerID, "*.log"))
-		}
+	if len(config.Containers.IDs) == 0 {
+		return nil, errors.New("Docker prospector requires at least one entry under 'containers.ids'")
 	}
 
-	if err := cfg.SetBool("docker-json", -1, true); err != nil {
+	for idx, containerID := range config.Containers.IDs {
+		cfg.SetString("paths", idx, path.Join(config.Containers.Path, containerID, "*.log"))
+	}
+
+	if err := checkStream(config.Containers.Stream); err != nil {
+		return nil, err
+	}
+
+	if err := cfg.SetString("docker-json", -1, config.Containers.Stream); err != nil {
 		return nil, errors.Wrap(err, "update prospector config")
 	}
 	return log.NewProspector(cfg, outletFactory, context)
+}
+
+func checkStream(val string) error {
+	for _, s := range []string{"all", "stdout", "stderr"} {
+		if s == val {
+			return nil
+		}
+	}
+
+	return fmt.Errorf("Invalid value for containers.stream: %s, supported values are: all, stdout, stderr", val)
 }
